# koml

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  model_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
core/: build.gradle.kts
core/src/commonMain/kotlin/dev/koml/core/: LlmCoordinator.kt  LlmSession.kt
core/src/commonMain/kotlin/dev/koml/core/config/: LlmKitConfig.kt  RuntimeConfig.kt
core/src/commonMain/kotlin/dev/koml/core/download/: DownloadState.kt  ModelDownloader.kt
core/src/commonMain/kotlin/dev/koml/core/error/: KomlException.kt
core/src/commonMain/kotlin/dev/koml/core/model/: ModelHandle.kt  ModelInfo.kt  ModelLicense.kt  PromptTemplate.kt
core/src/commonMain/kotlin/dev/koml/core/registry/: ModelRegistry.kt
core/src/commonMain/kotlin/dev/koml/core/session/: ChatMessage.kt  FinishReason.kt  GenParams.kt  GenStats.kt  TokenEvent.kt
core/src/commonMain/kotlin/dev/koml/core/storage/: ModelStorage.kt
docs/: PUBLISHING.md  VERSIONING.md  known-issues.md  phase-0-summary.md  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md
docs-site/: index.html  robots.txt  sitemap.xml  styles.css
docs/releases/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md
download/: build.gradle.kts
download/src/androidMain/kotlin/dev/koml/download/: HttpClientFactory.kt
download/src/appleMain/kotlin/dev/koml/download/: SystemFs.kt
download/src/commonMain/kotlin/dev/koml/download/: DefaultModelDownloader.kt  HttpClientFactory.kt  LicenseGate.kt  ModelDownloaderFactory.kt  Sha256Util.kt  SystemFs.kt
download/src/commonTest/kotlin/dev/koml/download/: DefaultModelDownloaderTest.kt  Sha256UtilTest.kt
download/src/iosMain/kotlin/dev/koml/download/: HttpClientFactory.kt
download/src/jvmMain/kotlin/dev/koml/download/: HttpClientFactory.kt
engine-llama/: build.gradle.kts
engine-llama/cpp/: koml_jni.cpp
engine-llama/src/androidMain/cpp/: CMakeLists.txt  koml_jni.cpp
engine-llama/src/androidMain/kotlin/dev/koml/engine/: LlamaNative.android.kt
engine-llama/src/commonMain/kotlin/dev/koml/engine/: LlamaNative.kt  LlmKit.kt
engine-llama/src/commonMain/kotlin/dev/koml/engine/chat/: ChatTemplate.kt
engine-llama/src/commonMain/kotlin/dev/koml/engine/internal/: DefaultLlmCoordinator.kt  DefaultLlmSession.kt  StopSequenceDetector.kt  StubDownloader.kt  StubRegistry.kt
engine-llama/src/commonTest/kotlin/dev/koml/engine/chat/: ChatTemplateTest.kt
engine-llama/src/commonTest/kotlin/dev/koml/engine/internal/: StopSequenceDetectorTest.kt
engine-llama/src/iosMain/kotlin/dev/koml/engine/: LlamaNative.ios.kt
engine-llama/src/jvmMain/cpp/: CMakeLists.txt
engine-llama/src/jvmMain/kotlin/dev/koml/engine/: LlamaNative.jvm.kt
engine-llama/src/jvmTest/kotlin/dev/koml/engine/integration/: JvmEndToEndTest.kt
engine-llama/src/nativeInterop/cinterop/: llama-macos.def  llama.def
gradle/: libs.versions.toml
registry/: build.gradle.kts
registry/src/appleMain/kotlin/dev/koml/registry/: HttpClientFactory.kt
registry/src/commonMain/kotlin/dev/koml/registry/: CuratedModels.kt  DefaultModelRegistry.kt  HttpClientFactory.kt  HuggingFaceSearcher.kt
registry/src/jvmMain/kotlin/dev/koml/registry/: HttpClientFactory.kt
samples-android/: build.gradle.kts
samples-android/src/main/: AndroidManifest.xml
samples-android/src/main/res/layout/: activity_main.xml
samples-android/src/main/res/values/: strings.xml  themes.xml
samples-desktop/: build.gradle.kts
samples-ios/: README.md  project.yml
samples-ios/KomlSample/: ContentView.swift  Info.plist  KomlSampleApp.swift
scripts/: build-llama-ios.sh  build-llama-jvm.sh  build-llama-macos-native.sh  refresh-manifest-shas.sh
storage/: build.gradle.kts
storage/src/androidMain/: AndroidManifest.xml
storage/src/androidMain/kotlin/dev/koml/storage/: KomlContextInitializer.kt  KomlRoot.kt
storage/src/appleMain/kotlin/dev/koml/storage/: SystemFs.kt
storage/src/commonMain/kotlin/dev/koml/storage/: DefaultModelStorage.kt  KomlRoot.kt  ModelStorageFactory.kt  SystemFs.kt
storage/src/iosMain/kotlin/dev/koml/storage/: KomlRoot.kt
storage/src/jvmMain/kotlin/dev/koml/storage/: KomlRoot.kt
(+3 files in other folders)
